--- a/base/static/css/bootstrap.less
+++ b/base/static/css/bootstrap.less
@@ -48,3 +48,4 @@
 // Utility classes
 @import "../bower_components/bootstrap/less/utilities.less";
 @import "../bower_components/bootstrap/less/responsive-utilities.less";
+@import "bootstrap-custom.less";
