--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -34,7 +34,7 @@ html(lang="es")
     link(type="text/less", rel="stylesheet", href="{% static 'css/site.less' %}",
       charset="utf-8")
     link(href="{% static 'css/detail.css' %}", rel="stylesheet")
-    link(href="{% static 'css/form.css' %}", rel="stylesheet")
+    link(href="{% static 'css/boostrap.less' %}", rel="stylesheet", type="text/less", charset="utf-8")
     {% endcompress %}
 
     //if lte IE 7
