Fix typo on bootstrap link in base template

--- a/base/templates/base.jade
+++ b/base/templates/base.jade
@@ -33,8 +33,7 @@ html(lang="es")
     link(href="{% static 'bower_components/select2/dist/css/select2.css' %}", rel="stylesheet")
     link(type="text/less", rel="stylesheet", href="{% static 'css/site.less' %}",
       charset="utf-8")
-    link(href="{% static 'css/detail.css' %}", rel="stylesheet")
-    link(href="{% static 'css/boostrap.less' %}", rel="stylesheet", type="text/less", charset="utf-8")
+    link(href="{% static 'css/bootstrap.less' %}", rel="stylesheet", type="text/less", charset="utf-8")
     {% endcompress %}
 
     //if lte IE 7
